SSCSFT-88 Address comments